Name:                   e
Version:                0.0.0
Author:                 Dmitry Malikov <malikov.d.y@gmail.com>
Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>
License:                MIT
License-File:           LICENSE
Synopsis:               Text encrypting using RSA and AES-GCM
Description:            Text encrypting using RSA and AES-GCM
Category:               Cryptography, System
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md
                      , ChangeLog.md
Data-Files:             test/data/.netrc.encrypted
                      , test/data/.netrc
                      , test/data/keys/idtest.private
                      , test/data/keys/idtest.public

Library
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall
  HS-Source-Dirs:       src
  Exposed-Modules:      Control.E.Keys
                      , Control.E.Keys.Internal
                      , Data.ByteString.Encrypt
                      , Data.Text.Template.Encrypt
                      , System.Template.Encrypt
  Other-Modules:
  Build-Depends:        base >= 4 && < 5
                      , base64-bytestring
                      , bytestring
                      , cipher-aes
                      , crypto-cipher-types
                      , either
                      , filepath
                      , directory
                      , DRBG
                      , random
                      , RSA >= 2.2.0
                      , text
                      , unordered-containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Ghc-Options:          -O2 -Wall
  Hs-Source-Dirs:       test/spec
  Main-Is:              Spec.hs
  Build-Depends:        base >= 4 && < 5
                      , base64-bytestring
                      , bytestring
                      , cipher-aes
                      , crypto-cipher-types
                      , directory
                      , DRBG
                      , e
                      , filepath
                      , hspec
                      , random
                      , RSA >= 2.2.0
                      , text

Test-Suite functional
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Ghc-Options:          -O2 -Wall
  Hs-Source-Dirs:       test/functional
  Main-Is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , directory
                      , e
                      , filepath
                      , process
                      , random

Executable e
  Main-is:              E.hs
  Default-Language:     Haskell2010
  Ghc-Options:          -O2 -Wall
  Hs-Source-Dirs:       exe
  Build-Depends:        base >= 4 && < 5
                      , bytestring
                      , e
                      , optparse-applicative
                      , text

Source-Repository head
  Type:                 git
  Location:             https://github.com/dmalikov/e
