name:                e-gpgme
synopsis:            Cipher routine for e.
description:         This library contains AES-GCM based Cipher / Decipher.
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.24
tested-with:         GHC == 8.2.1

source-repository head
  type: git
  location: _

library
  default-language: Haskell2010
  build-depends:
      base < 5
    , base64-bytestring
    , bytestring
    , e
    , h-gpgme
    , text
  exposed-modules: E.Algorithm.Gpgme
  other-modules: Crypto.Gpgme.Encrypt
  hs-source-dirs: src
  ghc-options: -Wall
