name:                e
synopsis:            Express sensitive data inside text files in readable and compact way.
description:         This library contains core primitives for working with text files containing sensitive data.
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.24
tested-with:         GHC == 8.2.1

source-repository head
  type: git
  location: _

library
  default-language: Haskell2010
  ghc-options:
    -Wall
  build-depends:
      base < 5
    , aeson
    , aeson-pretty
    , attoparsec
    , bytestring
    , directory
    , either
    , hashable
    , lens
    , mtl
    , parsers
    , text
    , transformers
    , unordered-containers
  exposed-modules:
      E
    , E.Encrypt
    , E.Metadata
    , E.Template
    , E.Action
    , E.Algorithm.Dummy
    , E.IO
    , E.Describe
    , Data.Either.MoreCombinators
  hs-source-dirs: src

-- phony exec to reduce dependency duplicates
-- inspired by https://stackoverflow.com/questions/10163604/how-to-reduce-duplication-in-the-build-depends-fields-of-a-cabal-file
executable ephony
  default-language: Haskell2010
  hs-source-dirs: exe
  main-is: Main.hs
  build-depends: base, e

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: test/spec/
  main-is: Spec.hs
  other-modules:
      E.Algorithm.DummySpec
    , E.ActionSpec
    , E.EncryptSpec
    , E.MetadataSpec
    , E.TemplateSpec
    , Arbitrary
  build-depends:
      base < 5
    , aeson
    , binary
    , directory
    , e
    , filepath
    , hspec
    , QuickCheck
    , quickcheck-instances
    , temporary
    , text
    , unordered-containers

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   bench
  main-is:          Main.hs
  other-modules:    Tem
  build-depends:
      base
    , criterion
    , e
    , deepseq
    , deepseq-generics
  ghc-options:
    -Wall
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
